# Android-Debug-Inject

./: README.md  build.gradle.kts  gradle.properties  settings.gradle.kts
ADI/: build.gradle.kts
ADI/src/androidTest/java/com/singularity/ptraceinject/: ExampleInstrumentedTest.java
ADI/src/main/cpp/: CMakeLists.txt
ADI/src/main/cpp/adi/: CMakeLists.txt  InjectProc.cpp  InjectProc.h  PtraceUtils.h  Utils.h  contorlProcess.cpp  contorlProcess.h  elf_symbol_resolver.cpp  json.hpp  logging.cpp  logging.h  main.cpp  parse_args.cpp
ADI/src/main/cpp/generalInjectTool/: PtraceInject.h  PtraceUtils.h
ADI/src/main/java/com/singularity/ptraceinject/: NativeLib.java
ADILib/: build.gradle.kts
ADILib/src/androidTest/java/com/hepta/zygisk/: ExampleInstrumentedTest.java
ADILib/src/main/cpp/: CMakeLists.txt  inject.json  inject2.json
ADILib/src/main/cpp/DrmHook/: DrmHook.cpp
ADILib/src/main/cpp/lsplt/: lsplt.cc
ADILib/src/main/java/com/hepta/adilib/: NativeLib.java
ADILib/src/test/java/com/hepta/adilib/: ExampleUnitTest.java
DebugInject/: build.gradle.kts
DebugInject/src/main/cpp/: CMakeLists.txt
DebugInject/src/main/cpp/ptraceInit/: CMakeLists.txt  InjectProc.cpp  InjectProc.h  PtraceUtils.h  RootImp.cpp  RootImp.h  Utils.h  elf_symbol_resolver.cpp  logging.cpp  main.cpp  zygiskd.cpp
DebugInject/src/main/cpp/ptraceInit/common/: daemon.h  elf_symbol_resolver.cpp  elf_symbol_resolver.h
DebugInject/src/test/java/com/singularity/ptraceinject/: ExampleUnitTest.java
Zygisk/: build.gradle.kts
Zygisk/src/main/cpp/: CMakeLists.txt
Zygisk/src/main/cpp/common/: CMakeLists.txt  daemon.cpp  daemon.h  logging.h  misc.cpp  misc.hpp  socket_utils.cpp  socket_utils.h
Zygisk/src/main/cpp/lsplt/: CMakeLists.txt  logging.hpp  syscall.hpp
Zygisk/src/main/cpp/lsplt/include/: lsplt.hpp
Zygisk/src/main/cpp/zygisk/: CMakeLists.txt  art_method.hpp  clean.cpp  clean.h  entry.cpp  hook.cpp  jni_hooks.hpp  module.cpp  module.hpp  solist.hpp  unmount.cpp  zygisk.hpp
Zygisk/src/main/cpp/zygisk/lsplt/: lsplt.cc
Zygisk/src/main/cpp/zygiskd/: CMakeLists.txt  RootImp.cpp  RootImp.h  apatch.cpp  apatch.h  companion.cpp  companion.h  ksu.cpp  ksu.h  magisk.cpp  magisk.h  module.cpp  module.h  parse_args.cpp  parse_args.h  sqlite3.cpp  sqlite3.h  zygiskd.cpp  zygiskd.h
Zygisk/src/main/java/com/hepta/zygisk/: NativeLib.java
Zygisk/src/test/java/com/hepta/zygisk/: ExampleUnitTest.java
doc/: zygisk Mount.md
gradle/: libs.versions.toml
gradle/wrapper/: gradle-wrapper.properties
module/: build.gradle.kts
module/src/: inject.json  module.prop  post-fs-data.sh  sepolicy.rule  service.sh  zygisk.json  zygisk3.json  zygisk4.json  zygisk5.json
